fixed ui on small screen

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,6 @@
 
 body {
     height: 100vh;
-    overflow: hidden;
     background-color: #f5f5f5;
     font-family: system-ui;
     line-height: 1.5;
@@ -32,12 +31,12 @@ body {
     padding: 10px;
     background-color: white;
     border-radius: 4px;
-    height: calc(100vh - 50px);
+    min-height: calc(100vh - 50px);
 }
 
 .main > div {
     flex: 1;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 .container {
@@ -146,4 +145,10 @@ button {
 button:hover {
     cursor: pointer;
     background-color: #0099ff;
+}
+
+@media (max-width: 480px) {
+    input, textarea, button {
+        font-size: 1rem; 
+    }
 }
